syntax = "proto3";

package hello;

option go_package = "/pb/hello;hello";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc SayGoodbye (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
